Fixed naming of getOrganizations | Fixed css component spacing

--- a/frontend/src/app/organization-details/organization-details.component.css
+++ b/frontend/src/app/organization-details/organization-details.component.css
@@ -4,13 +4,13 @@
     background-attachment: fixed;
     background-size: 60% 120%;
     background-position: center;
-    background-position-x: 400px;
-    background-position-y: -50px;
-    min-height: 800px;
+    background-position-x: 70%;
+    background-position-y: 15%;
+    min-height: 80vh
 }
 
 .organizationDetailsContainer{
-    margin-top: 10px;
+    margin-top: 1%;
     display: flex;
     flex-direction: column;
 }
@@ -18,24 +18,23 @@
 .descriptionContainer {
     align-items: center;
     display:flex;
-    margin-left: 60px;
-    margin-right: 40px;
+    margin-left: 4.5%;
+    margin-right: 4%;
     border-radius: 30px;
     border-width: 5px;
     background-color: #3e3e3e;
 }
 
 .titleAndImageContainer{
-    margin: 10px;
-    margin-top: -5px;
-    margin-left: 40px;
+    margin: 1%;
+    margin-left: 3%;
     display: flex;
     flex-direction: row;
     align-items: center;
 }
 
 .orgImg {
-    width: 100px;
-    height: 100px;
-    margin: 20px;
+    width: 7%;
+    height: 7%;
+    margin: 2%;
 }
